[package]
name = "clock"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/othelarian/othy-lab"
authors = ["othelarian <le.maitre.killian@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.57"
features = ["CanvasRenderingContext2d", "HtmlCanvasElement"]
