[package]
name = "lab"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/othelarian/othy-lab"
authors = ["othelarian <le.maitre.killian@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
markdown = "0.3.0"
strum = "0.24.1"
strum_macros = "0.24.1"
wasm-bindgen = "0.2.80"
wee_alloc = "0.4.5"
yew = "0.19.3"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "CssStyleDeclaration", "DomTokenList", "Element",
  "EventTarget", "HtmlElement", "Location", "Window"
]
